Disallow username and email changes on user update
