# docs/swagger.json
@@ -2088,7 +2088,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.PortalUserRequest"
+                            "$ref": "#/definitions/dto.PortalUserUpdateRequest"
                         }
                     }
                 ],
@@ -2772,6 +2772,20 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.PortalUserUpdateRequest": {
+            "type": "object",
+            "properties": {
+                "fullName": {
+                    "type": "string"
+                },
+                "groupId": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
